Harden skill after hunt 34 Occupied aisle
Independent rater: Occupied/file_on only. None is a Sparse/Greenfield
company keep. JVM version pin exec interlock refusing wrong `java` on checked-in `.java-version` / `.sdkmanrc` / toolchain file; JAVA_TOOL_OPTIONS / JDK_JAVA_OPTIONS flag allowlist gate stripping debug/agent smuggling at `java` launch; -javaagent allowlist interlock per `java` launch from sha256-pinned policy; JPMS --add-opens / --add-exports encapsulation-break allowlist gate at `java` launch; JNI native-library path allowlist gate on `java.library.path` plus loadLibrary targets

Co-authored-by: kiran kumar <kirank55@users.noreply.github.com>